[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[lib]
name = "engine"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3"
rand = "0.8"
chrono = "0.4"
rand_chacha = "0.3"
clap = { version = "3.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tower = { version = "0.4" }
hyper = { version = "0.14" }
serde_json = "1.0"
