[package]
name = "rustorderbooks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustorderbooks"
path = "src/main.rs"

[lib]
name = "rustorderbooks"
path = "src/lib.rs"

[[bench]]
name = "performance"
harness = false

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
rand_chacha = "0.3"
clap = { version = "3.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower-http = { version = "0.4", features = ["trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = { version = "0.8" }
crossbeam-skiplist = "0.1.3"
crossbeam-queue = "0.3.11"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
tower = { version = "0.4" }
hyper = { version = "0.14" }
paste = "1.0"
